增加了获取博客数量和标签数量的接口
